objects/CallidusStage__c.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <label>AccountName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CustomerID__c</fullName>
        <description>Company ID or CAN</description>
        <label>CustomerID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSource__c</fullName>
        <label>DataSource</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EventType__c</fullName>
        <label>EventType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>booking</fullName>
                </value>
                <value>
                    <fullName>cancel</fullName>
                </value>
                <value>
                    <fullName>upgrade</fullName>
                </value>
                <value>
                    <fullName>resubscribe</fullName>
                </value>
                <value>
                    <fullName>suspend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <description>Date to Track the status change date based on FCD,CD,SD,RD,UD updated from Asset</description>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Line__c</fullName>
        <label>Line</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfUnits__c</fullName>
        <label>NumberOfUnits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderId__c</fullName>
        <label>OrderId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayeeId__c</fullName>
        <label>PayeeId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessedFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ProcessedFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductID__c</fullName>
        <label>ProductID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SetNumber__c</fullName>
        <label>SetNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SubLine__c</fullName>
        <label>SubLine</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TransactionId__c</fullName>
        <externalId>true</externalId>
        <label>TransactionId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpgradeAmount__c</fullName>
        <label>UpgradeAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <formula>CASE( 
EventType__c, 
&quot;booking&quot;, Amount__c, 
&quot;cancel&quot;, (Amount__c * -1), 
&quot;suspend&quot;, (Amount__c * -1), 
&quot;resubscribe&quot;, Amount__c, 
Amount__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllQBO</fullName>
        <columns>OrderId__c</columns>
        <columns>TransactionId__c</columns>
        <columns>EventType__c</columns>
        <columns>CustomerID__c</columns>
        <columns>ProductID__c</columns>
        <columns>PayeeId__c</columns>
        <columns>Amount__c</columns>
        <columns>Value__c</columns>
        <columns>Event_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ProcessedFlag__c</columns>
        <columns>NAME</columns>
        <columns>Error__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductID__c</field>
            <operation>contains</operation>
            <value>Payroll</value>
        </filters>
        <label>QBO</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllRecords</fullName>
        <columns>NAME</columns>
        <columns>DataSource__c</columns>
        <columns>OrderId__c</columns>
        <columns>PayeeId__c</columns>
        <columns>ProductID__c</columns>
        <columns>TransactionId__c</columns>
        <columns>EventType__c</columns>
        <columns>Amount__c</columns>
        <columns>Value__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Event_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ProcessedFlag__c</columns>
        <columns>Error__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Nov</fullName>
        <columns>OrderId__c</columns>
        <columns>TransactionId__c</columns>
        <columns>Event_Date__c</columns>
        <columns>EventType__c</columns>
        <columns>CustomerID__c</columns>
        <columns>ProductID__c</columns>
        <columns>PayeeId__c</columns>
        <columns>Amount__c</columns>
        <columns>Value__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ProcessedFlag__c</columns>
        <columns>NAME</columns>
        <columns>Error__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductID__c</field>
            <operation>contains</operation>
            <value>QuickBooks Online</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>3/1/2017 12:00 AM</value>
        </filters>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>GBP</value>
        </filters>
        <label>Nov</label>
        <language>en_US</language>
    </listViews>
</CustomObject>